# weathercat

./: .gitignore  README.md  pyproject.toml
src/weathercat/: __init__.py  __main__.py  script.py
src/weathercat/config/: __init__.py  cli.py  file.py  log.py
src/weathercat/geolocation/: __init__.py  geolocation.py
src/weathercat/output/: __init__.py  output.py
src/weathercat/providers/: open_meteo.py
tests/: conftest.py  forecast.txt  test_cli.py  test_offline.py  test_output.py
