[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pylint>=2.15.10",
]

[project]
name = "weathercat"
version = "0.1dev0"
description = "Terminal weather"
authors = [
    {name = "Okko Hartikainen", email = "okko.hartikainen@yandex.com"},
]
dependencies = [
    "colorlog>=6.7.0",
    "platformdirs>=2.6.2",
    "tomli>=2.0.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GPL-3.0-only"}

[project.scripts]
weathercat = "weathercat.script:main"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
